@@ -86,6 +86,18 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>September 22, 2008</h3>
+	      <b>Stable</b> version 2.24.0 released.<br />
+			This is the first release of the stable 2.24 series
+			and only contains small bug fixes compared to 2.23.92
+			<br /><br />
+			Changes since 2.23.92:
+			<ul>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=551166" target="_blank">bug #551166</a>: Cannot enable Templates module. Stop monitoring directory when module is stopped. Throw exception when something went wrong and use constants defined in C</li>
+			<li>Fixed: Wikipedia suggest doesn't respect proxy settings</li>
+			</ul>
+		    <a href="download.html">Download it</a>
+		  
 	    <h3>September 8, 2008</h3>
 	      <b>Unstable</b> version 2.23.92 released.<br />
 	      This is the last release before the
